# public/api.yaml
@@ -89,7 +89,7 @@ paths:
                 phone_number:
                   type: string
                   description: "User phone number"
-                marketing:
+                is_marketing:
                   type: string
                   description: "User marketing preferences"
               required:
@@ -173,6 +173,72 @@ paths:
             enum:
               - 0
               - 1
+      responses:
+        200:
+          description: "Ok"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Page not found"
+        422:
+          description: "Unprocessable Entity"
+        500:
+          description: "Internal server error"
+
+  /api/v1/admin/user-edit/{uuid}:
+    put:
+      tags:
+        - Admin
+      summary: "Edit a User account"
+      operationId: 'admin-user-edit'
+      parameters:
+        - name: uuid
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  description: "User first name"
+                last_name:
+                  type: string
+                  description: "User last name"
+                email:
+                  type: string
+                  description: "User email"
+                password:
+                  type: string
+                  description: "User password"
+                password_confirmation:
+                  type: string
+                  description: "User password"
+                avatar:
+                  type: string
+                  description: "Avatar image UUID"
+                address:
+                  type: string
+                  description: "User address"
+                phone_number:
+                  type: string
+                  description: "User phone number"
+                is_marketing:
+                  type: string
+                  description: "User marketing preferences"
+              required:
+                - first_name
+                - last_name
+                - email
+                - password
+                - password_confirmation
+                - address
+                - phone_number
       responses:
         200:
           description: "Ok"
